# Werewolf-Game

./: CMakeLists.txt  README.md  notes.txt
src/: Player.cpp  Player.h  Selector.cpp  Selector.h  Timer.cpp  Timer.h  main.cpp
